--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe book</title>
+    <title>Hamburger recipe</title>
 </head>
 <body>
-    <h1>Hamlicar's fucking cookbook</h1>
+    <h1>Classic Hamburger</h1>
 </body>
 </html>
