Index Page is done

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Hamlicar's fucking cookbook</h1>
+    <img width="300" alt="fatty man" src="./images/indexfatty.png">
+    <h4>Bunch of simple Brainrot recipes</h4>
+    <h3><a href="./recipes/hamburger.html">Basic Hamburger recipe</a></h3>
+    <h3><a href="./recipes/hotdog.html">Basic Hotdog</a></h3>
+    <h3><a href="./recipes/pizza.html">Basic Pizza</a></h3>
 </body>
 </html>
